# pipelog

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: release.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: index.ts  types.d.ts
backend/src/db/: migrate.ts  pool.ts
backend/src/middleware/: errorHandler.ts
backend/src/routes/: auth.ts  entries.ts  syncClipboard.ts  workspaces.ts
cli/: Cargo.toml  Dockerfile
cli/src/: api.rs  auth.rs  capture.rs  clipboard.rs  config.rs  daemon.rs  main.rs  runner.rs  shell_detect.rs
scripts/: install.ps1  install.sh  uninstall.sh
web/: .firebaserc  firebase.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  index.css  vite-env.d.ts
web/src/components/: CopyCommandButton.tsx
web/src/pages/: CliAuth.tsx  Dashboard.tsx  GetStarted.tsx  InstallCli.tsx  Landing.tsx  Login.tsx  Register.tsx  SharedEntry.tsx
