[package]
name = "pipelog"
# Keep in sync with release tags: install.sh compares GitHub latest tag to `pipelog --version` (from this + CARGO_PKG_VERSION in main.rs).
version = "0.1.1"
edition = "2021"
description = "Capture and share command output with your team"

[[bin]]
name = "pipelog"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
colored = "2"
indicatif = "0.17"
open = "5"
tokio-util = "0.7"
atty = "0.2"
portable-pty = "0.8"
arboard = "3"
strip-ansi-escapes = "0.2"
crossterm = "0.28"
shell-words = "1.1"

[target."cfg(unix)".dependencies]
signal-hook = { version = "0.3", features = ["iterator"] }
libc = "0.2"

[target."cfg(windows)".dependencies]
sysinfo = "0.38.4"
ctrlc = "3.4"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
